# HL_AI

./: .env.example  .gitignore  README.md  alembic.ini  app_remainder.txt  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
architecture/: ARCHITECTURE.md
backend/: demo.py
backend/api/: app.py  dependencies.py  ingestion_routes.py  ingestion_schemas.py  queued_ingestion_service.py  rag_service.py  routes.py  schemas.py
backend/chunking/: fixed_size_chunker.py  semantic_chunker.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  active_ingestion.py  active_job_index.py  base.py  ingestion_lifecycle.py  ingestion_queue.py  ingestion_recovery.py  ingestion_retry.py  models.py  payload_repository.py  queued_worker.py  repositories.py  session.py
backend/embeddings/: ollama_embedder.py
backend/indexing/: embedding.py  indexer.py  interfaces.py  models.py  processor.py
backend/ingestion/: pipeline.py  scanner.py
backend/interfaces/: chunker.py  embedder.py  generator.py  parser.py  reranker.py  retriever.py  vector_store.py
backend/llm/: ollama_generator.py
backend/logging/: logger.py
backend/parser/: code_parser.py  markdown_parser.py  pdf_parser.py  registry.py  text_parser.py
backend/rag/: pipeline.py  prompt_builder.py
data/: sample.txt  upload-test.txt
data/rag_demo/: bm25.txt  (+4 more)
docs/: ROADMAP.md
evaluation/: dataset.py  evaluator.py  metrics.py  sample_questions.json
frontend/: api.py  app.py
tests/: test_active_ingestion.py  test_api.py  test_app_lifespan.py  test_bm25_retriever.py  test_chunker.py  test_cross_encoder_reranker.py  test_database_models.py  test_database_repositories.py  test_demo.py  test_dense_retriever.py  test_document_delete_route.py  test_document_routes.py  test_documents_api.py  test_duplicate_ingestion_api.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_hybrid_retriever.py  test_indexer.py  test_ingestion_jobs_api.py  test_ingestion_lifecycle.py  test_ingestion_payload_repository.py  test_ingestion_queue.py  test_ingestion_recovery.py  test_ingestion_retry.py  test_ingestion_retry_api.py  test_ollama_embedder.py  test_ollama_generator.py  test_parser.py  test_parser_registry.py  test_pdf_parser.py  test_prompt_builder.py  test_qdrant_vector_store.py  test_queued_ingestion_api.py  test_queued_worker.py  test_rag_pipeline.py  test_rag_service_database_ingest.py  test_rag_service_delete.py  test_rag_service_ingest.py  test_rag_service_persistent_ingest.py  test_reranking_retriever.py  (+3 more)
(+20 files in other folders)
